--- a/style_github.css
+++ b/style_github.css
@@ -1,4 +1,3 @@
-#See if you can add multiple files on GitHub
 
 div {
 	border-radius: 0px;
@@ -115,7 +114,7 @@ a:link {
 	-box-shadow: 2px 2px 2px #888888;
 	-margin: 20px 11px 13px 2px;
 	font-family: 'Heebo', sans-serif;
-	font-size: 16px;
+	font-size: 13.5px;
 	color:#09c;
 
 }
@@ -129,8 +128,8 @@ a:link {
 	background-color: #333333;
 	-box-shadow: 2px 2px 2px #888888;
 	-margin: 20px 11px 13px 2px;
-	font-family: 'Ubuntu Mono', sans-serif;
-	font-size: 18px;
+	font-family: 'Roboto Mono', monospace;
+	font-size: 13.5px;
 	color:#FFFFFF;
 
 }
@@ -159,8 +158,8 @@ a:link {
 	background-color: #333333;
 	-box-shadow: 2px 2px 2px #888888;
 	-margin: 20px 11px 13px 2px;
-	font-family: 'Ubuntu Mono', sans-serif;
-	font-size: 18px;
+	font-family: 'Roboto Mono', monospace;
+	font-size: 16px;
 	color:#FFFFFF;
 
 }
