--- a/quotes_style.css
+++ b/quotes_style.css
@@ -1,4 +1,3 @@
-
 #quoteDisplay {
   font-size: 22px;
   font-family: 'Raleway', sans-serif;
@@ -9,4 +8,35 @@
 
 p {
   color: white;
+}
+
+#button {
+    display: block;
+    width:150px;
+    margin:10px auto;
+    padding:7px 13px;
+    text-align:center;
+    background:#a2bb33;
+    font-size:20px;
+    font-family: 'Arial', sans-serif;
+    color:#ffffff;
+    white-space: nowrap;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+
+}
+.button {
+    background-color: #337AB7;
+    border: none;
+    color: white;
+    padding: 6.7px 8px;
+    text-align: center;
+    border-radius: 4px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 2px 2px;
+    cursor: pointer;
+    font-family: "Helvetica";
 }
