--- a/redwoods2.css
+++ b/redwoods2.css
@@ -13,7 +13,6 @@ html {
 }
 body {
     margin: 0
-	
 }
 article,
 aside,
@@ -46,19 +45,16 @@ template {
 }
 a {
     background-color: transparent;
-	text-decoration: none;
-	
+    text-decoration: none;
 }
-a:active
-{
-	font-weight: bold;
-	color: #612711;
-	
+a:active {
+    font-weight: bold;
+    color: #612711;
 }
 a:hover {
     outline: 0;
-	font-weight: bold;
-	color: #612711;
+    font-weight: bold;
+    color: #612711;
 }
 abbr[title] {
     border-bottom: 1px dotteds
@@ -103,7 +99,7 @@ code,
 kbd,
 pre,
 samp {
-    font-family: 'Heebo', sans-serif;
+    font-family: 'Yantramanav', sans-serif;
     font-size: 1em
 }
 button,
@@ -171,12 +167,12 @@ textarea {
 
 html,
 body {
-    font-family: 'Heebo', sans-serif;
-    font-size: 15px;
-    line-height: 1.5;
-	font-weight: 300;
-	text-decoration: none;
-	background-color: #F4F0ED;
+    font-family: 'Yantramanav', sans-serif;
+    font-size: 18px;
+    line-height: 1.3;
+    font-weight: 300;
+    text-decoration: none;
+    background-color: #F4F0ED;
 }
 html {
     overflow-x: hidden
@@ -189,16 +185,15 @@ h5,
 h6,
 .w3-slim,
 .w3-wide {
-    font-family: "Heebo", Arial, sans-serif;
-	
+    font-family: "Yantramanav", Arial, sans-serif;
 }
 h1 {
     font-size: 36px;
-	color: white;
+    color: white;
 }
 h2 {
     font-size: 30px;
-	color: #BE1E2D;
+    color: #BE1E2D;
 }
 h3 {
     font-size: 24px
@@ -221,7 +216,9 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: 400;
+    font-weight: 700;
+    font-family: 'Raleway', sans-serif;
+    font-style: italic;
     margin: 10px 0
 }
 .w3-wide {
