link change color

--- a/css/style.css
+++ b/css/style.css
@@ -62,18 +62,18 @@ executable file 778 lines (654 sloc) 13.5 KB
 	   	font-family: 'Heebo', sans-serif;
 		font-weight: 300;
 		-font-size: 16pt;
-	
+
 		line-height: 1.75em;
 		color: #FFF;
 	}
 
 	h1,h3,h4,h5,h6
 	{
-	
+
 		color: #000;
 		line-height: 1.5em;
 	}
-	
+
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
 		{
 			color: inherit;
@@ -84,18 +84,18 @@ executable file 778 lines (654 sloc) 13.5 KB
 		{
 			color: #FFFFFF;
 		}
-		
+
 		h2
 		{
 			font-size: 1.30em;
 			letter-spacing: -.80px;
 		}
-		
+
 			h2.alt
 			{
 				color: #888;
 			}
-			
+
 			h2.alt strong
 			{
 				color: #666;
@@ -126,7 +126,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 		font-weight: 300;
 		color: #666;
 	}
-	
+
 	em, i
 	{
 		font-style: italic;
@@ -147,7 +147,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 
 		a:hover
 		{
-			color: #E27689;
+			color: #F9F7F6;
 			border-bottom-color: rgba(255,255,255,0);
 		}
 
@@ -157,27 +157,27 @@ executable file 778 lines (654 sloc) 13.5 KB
 		top: 0.5em;
 		font-size: 0.8em;
 	}
-	
+
 	sup
 	{
 		position: relative;
 		top: -0.5em;
 		font-size: 0.8em;
 	}
-	
+
 	hr
 	{
 		border: 0;
 		border-top: solid 1px #ddd;
 	}
-	
+
 	blockquote
 	{
 		border-left: solid 0.5em #ddd;
 		padding: 1em 0 1em 2em;
 		font-style: italic;
 	}
-	
+
 	p, ul, ol, dl, table
 	{
 		margin-bottom: 2em;
@@ -189,13 +189,13 @@ executable file 778 lines (654 sloc) 13.5 KB
 	}
 
 	/* Sections/Article */
-	
+
 		section,
 		article
 		{
 			margin-bottom: 3em;
 		}
-		
+
 			section > :last-child,
 			article > :last-child,
 			section > .container > :last-child,
@@ -223,20 +223,20 @@ executable file 778 lines (654 sloc) 13.5 KB
 			display: inline-block;
 			border: 0;
 		}
-		
+
 			.image img
 			{
 				display: block;
 				width: 100%;
 			}
-			
+
 			.image.avatar48
 			{
 				width: 48px;
 				height: 48px;
 				-background: #f00;
 			}
-			
+
 				.image.avatar48 img
 				{
 					width: 48px;
@@ -248,20 +248,20 @@ executable file 778 lines (654 sloc) 13.5 KB
 				display: block;
 				width: 100%;
 			}
-			
+
 			.image.featured
 			{
 				display: block;
 				width: 100%;
 				margin: 0 0 2em 0;
 			}
-			
+
 			.image.left
 			{
 				float: left;
 				margin: 0 2em 2em 0;
 			}
-			
+
 			.image.centered
 			{
 				display: block;
@@ -285,22 +285,22 @@ executable file 778 lines (654 sloc) 13.5 KB
 				list-style: disc;
 				padding-left: 1em;
 			}
-			
+
 				ul.default li
 				{
 					padding-left: 0.5em;
-				}		
+				}
 
 			ul.icons
 			{
 				cursor: default;
-			}	
-			
+			}
+
 				ul.icons li
 				{
 					display: inline-block;
 				}
-				
+
 					ul.icons a
 					{
 						display: inline-block;
@@ -314,7 +314,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 		ol
 		{
 		}
-		
+
 			ol.default
 			{
 				list-style: decimal;
@@ -331,14 +331,14 @@ executable file 778 lines (654 sloc) 13.5 KB
 		form
 		{
 		}
-		
+
 			form label
 			{
 				display: block;
 				text-align: left;
 				margin-bottom: 0.5em;
 			}
-		
+
 			form input[type="text"],
 			form input[type="email"],
 			form input[type="password"],
@@ -381,7 +381,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 					-box-shadow: 0 0 2px 1px #8ebebc;
 					background: #fff;
 				}
-				
+
 				form textarea
 				{
 					min-height: 14em;
@@ -416,30 +416,30 @@ executable file 778 lines (654 sloc) 13.5 KB
 				{
 					border: 0;
 				}
-			
+
 	/* Table */
-	
+
 		table
 		{
 			width: 100%;
 		}
-		
+
 			table.default
 			{
 				width: 100%;
 				text-align: left;
 			}
-			
+
 				table.default tbody tr:nth-child(2n+2)
 				{
 					background: #f4f4f4;
 				}
-				
+
 				table.default td
 				{
 					padding: 0.5em 1em 0.5em 1em;
 				}
-				
+
 				table.default th
 				{
 					text-align: left;
@@ -447,24 +447,24 @@ executable file 778 lines (654 sloc) 13.5 KB
 					color: #fff;
 					-background: #222729 url('images/overlay.png');
 				}
-			
+
 				table.default thead
 				{
 					background: #444;
 					color: #fff;
 				}
-				
+
 				table.default tfoot
 				{
 					background: #eee;
 				}
-				
+
 				table.default tbody
 				{
 				}
 
 	/* Button */
-		
+
 		input[type="button"],
 		input[type="submit"],
 		input[type="reset"],
@@ -477,7 +477,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 			background-color: #9ececc;
 			border-radius: 0.20em;
 			-border-color: #000;
-		
+
 		}
 
 			input[type="button"]:hover,
@@ -487,7 +487,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 			{
 				background-color: #373737;
 			}
-			
+
 			input[type="button"]:active,
 			input[type="submit"]:active,
 			input[type="reset"]:active,
@@ -495,15 +495,15 @@ executable file 778 lines (654 sloc) 13.5 KB
 			{
 				-background-color: #7eaeac;
 			}
-		
+
 	/* Item */
-	
+
 		.item
 		{
 			-box-shadow: 0 0.05em 0.15em 0 rgba(0,0,0,0.05);
 			margin-bottom: 40px;
 		}
-		
+
 			.item header
 			{
 				-background: #fff;
@@ -536,7 +536,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 			-webkit-font-smoothing:antialiased;
 			-moz-osx-font-smoothing:grayscale;
 		}
-		
+
 		.icon > .label {
 			display: none;
 		}
@@ -544,7 +544,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 /*********************************************************************************/
 /* Header                                                                        */
 /*********************************************************************************/
-	
+
 	#header
 	{
 		position: fixed;
@@ -557,7 +557,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 		-box-shadow: inset -0.25em 0 0.25em 0 rgba(0,0,0,0.1);
 		text-align: right;
 	}
-	
+
 		#header .top
 		{
 			position: absolute;
@@ -565,7 +565,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 			top: 0;
 			width: 100%;
 		}
-	
+
 		#header .bottom
 		{
 			position: absolute;
@@ -580,7 +580,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 			margin: 0 0 1em 0;
 			text-align: center;
 		}
-		
+
 			#header .icons a
 			{
 				color: #41484c;
@@ -590,7 +590,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 				-ms-transition: color 0.35s ease-in-out;
 				transition: color 0.35s ease-in-out;
 			}
-			
+
 				#header .icons a:hover
 				{
 					color: #000;
@@ -603,7 +603,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 		min-height: 48px;
 		cursor: default;
 	}
-	
+
 		#logo h1
 		{
 			position: relative;
@@ -612,7 +612,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 			font-size: 1em;
 			line-height: 1em;
 		}
-	
+
 		#logo p
 		{
 			position: relative;
@@ -622,26 +622,26 @@ executable file 778 lines (654 sloc) 13.5 KB
 			line-height: 1.25em;
 			margin: 0.5em 0 0 0;
 		}
-		
+
 		#logo .image
 		{
 			position: absolute;
 			left: 0;
 			top: 0;
 		}
-	
+
 	#nav
 	{
 	}
-	
+
 		#nav ul
 		{
 		}
-		
+
 			#nav ul li
 			{
 			}
-			
+
 				#nav ul li a
 				{
 					display: block;
@@ -656,14 +656,14 @@ executable file 778 lines (654 sloc) 13.5 KB
 					-ms-transition: none;
 					transition: none;
 				}
-				
+
 					#nav ul li a span
 					{
 						position: relative;
 						display: block;
 						font-size: 0.8em;
 					}
-					
+
 						#nav ul li a span:before
 						{
 							position: absolute;
@@ -694,7 +694,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 /*********************************************************************************/
 /* Footer                                                                        */
 /*********************************************************************************/
-	
+
 	#footer
 	{
 		margin-left: 375px;
@@ -711,7 +711,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 			cursor: default;
 			margin: 0;
 		}
-			
+
 			#footer .copyright li
 			{
 				display: inline-block;
@@ -720,7 +720,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 				padding: 0 0 0 0.5em;
 				margin: 0 0 0 0.5em;
 			}
-			
+
 			#footer .copyright li:first-child
 			{
 				border-left: 0;
@@ -736,7 +736,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 	{
 		margin-left: 375px;
 	}
-	
+
 		#main > section
 		{
 			margin: 0;
@@ -782,7 +782,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 				background-position: center center;
 				background-image: url("bands.jpg");
 			}
-		
+
 			#main > section.one
 			{
 				background-color: #F4F0ED;
@@ -793,18 +793,17 @@ executable file 778 lines (654 sloc) 13.5 KB
 			{
 				background-color: #BAB0AE;
 			}
-		
+
 			#main > section.three
 			{
 				background-color: #32292C;
 			}
-		
+
 			#main > section.four
 			{
 				background-color: #BAB0AE;
 			}
 
-    Contact GitHub API Training Shop Blog About 
+    Contact GitHub API Training Shop Blog About
 
-    © 2016 GitHub, Inc. Terms Privacy Security Status Help 
-
+    © 2016 GitHub, Inc. Terms Privacy Security Status Help
