--- a/redwoods.css
+++ b/redwoods.css
@@ -1,27 +1,74 @@
-#quoteDisplay {
-  font-size: 22px;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 400;
-  font-style: italic;
+@import url('https://fonts.googleapis.com/css?family=Yantramanav:300,500');
 
-}
-
-p {
-  color: white;
-}
-
-
-.button {
-    background-color: #337AB7;
-    border: none;
-    color: white;
-    padding: 6.7px 8px;
-    text-align: center;
-    border-radius: 4px;
+a {
+    background-color:transparent;
     text-decoration: none;
-    display: inline-block;
-    font-size: 12px;
-    margin: 2px 2px;
-    cursor: pointer;
-    font-family: "Helvetica";
+    color: #7F1C25;
+    font-style: normal;
+}
+
+a:hover {
+    outline: 0;
+    font-weight: bold;
+    color: #612711;
+}
+
+h3 {
+   color: #7F1C25;
+}
+body {
+   font-family: 'Yantramanav',    sans-serif;
+   background-color: #F4F0ED;
+   padding-top: 50px;
+   line-height: 1.4;
+   font-size: 1.4em;
+   font-weight: 300;
+}
+
+.tabs {
+	clear: both;
+	position: relative;
+   max-width: 650px;
+   margin: 0 auto;
+   /* you can either manually set a min-height here or do it via JS ---> */
+}
+
+.tab {
+	float: left;
+}
+
+.tab label {
+   font-size: 30px;
+   font-weight: 500;
+	margin-right: 20px;
+	position: relative;
+	top: 0;
+	cursor: pointer;
+	color: #7F1C25;
+   text-transform: smallcaps;
+}
+
+.tab [type=radio] {
+	display: none;
+}
+
+.tab__content {
+   position: absolute;
+	top: 40px;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	transition: opacity .2s cubic-bezier(.42,0,.34,1.01);
+	opacity: 0;
+}
+
+[type=radio]:checked ~ label {
+	border-bottom: 2px solid #1d1d1d;
+	color: #1d1d1d;
+	z-index: 2;
+}
+
+[type=radio]:checked ~ label ~ .tab__content {
+	z-index: 1;
+	opacity: 1;
 }
