--- a/redwoods.css
+++ b/redwoods.css
@@ -13,15 +13,23 @@ a:hover {
     color: #612711;
 }
 
-h3 {
+h2 {
    color: #7F1C25;
+   font-family: 'Yantramanav', sans-serif;
+   -font-weight: 300;
+}
+
+h1 {
+   color: #7F1C25;
+   font-family: 'Yantramanav', sans-serif;
+   font-weight: 300;
 }
 body {
-   font-family: 'Yantramanav',    sans-serif;
+   font-family: 'Yantramanav', sans-serif;
    background-color: #F4F0ED;
    padding-top: 50px;
-   line-height: 1.4;
-   font-size: 1.4em;
+   line-height: 1.2;
+   font-size: 1.2em;
    font-weight: 300;
 }
 
@@ -38,14 +46,15 @@ body {
 }
 
 .tab label {
-   font-size: 30px;
-   font-weight: 500;
+  font-size: 28px;
+  font-weight: 500;
 	margin-right: 20px;
 	position: relative;
 	top: 0;
 	cursor: pointer;
 	color: #7F1C25;
    text-transform: smallcaps;
+   font-weight: 300;
 }
 
 .tab [type=radio] {
