--- a/redwoods.css
+++ b/redwoods.css
@@ -26,7 +26,7 @@ h1 {
 }
 body {
    font-family: 'Yantramanav', sans-serif;
-   background-color: #F4F0ED;
+   background-color: #FEFEFE;
    padding-top: 50px;
    line-height: 1.2;
    font-size: 1.2em;
