--- a/redwoods.css
+++ b/redwoods.css
@@ -13,16 +13,16 @@ a:hover {
     color: #612711;
 }
 
-h3 {
+h2 {
    color: #7F1C25;
    font-family: 'Yantramanav', sans-serif;
-   font-weight: 500;
+   -font-weight: 300;
 }
 
 h1 {
    color: #7F1C25;
    font-family: 'Yantramanav', sans-serif;
-   font-weight: 500;
+   font-weight: 300;
 }
 body {
    font-family: 'Yantramanav', sans-serif;
@@ -46,14 +46,14 @@ body {
 }
 
 .tab label {
-  font-size: 25px;
+  font-size: 28px;
   margin-right: 20px;
 	position: relative;
 	top: 0;
 	cursor: pointer;
 	color: #7F1C25;
   text-transform: smallcaps;
-  font-weight: 500;
+  font-weight: 300;
 }
 
 .tab [type=radio] {
@@ -71,7 +71,7 @@ body {
 }
 
 [type=radio]:checked ~ label {
-	border-bottom: 1px solid #7F1C25;;
+	border-bottom: 2px solid #7F1C25;
 	color: #7F1C25;
 	z-index: 2;
 }
