--- a/redwoods.css
+++ b/redwoods.css
@@ -29,8 +29,10 @@ body {
    font-family: 'Bellefair', sans-serif;
    background-color: #E8F2F1;
    padding-top: 50px;
+   padding-left: 50px;
+   padding-right: 50px;
    line-height: 1.2;
-   font-size: 1.2em;
+   font-size: 1.33em;
    font-weight: 300;
 }
 
