--- a/redwoods.css
+++ b/redwoods.css
@@ -33,7 +33,7 @@ body {
    padding-right: 15px;
    line-height: 1.2;
    font-size: 1.33em;
-   font-weight: 300;
+
 }
 
 .tabs {
@@ -49,14 +49,15 @@ body {
 }
 
 .tab label {
-  font-size: 28px;
-  margin-right: 20px;
+  font-size: 24px;
+  margin-right: 25px;
 	position: relative;
 	top: 0;
 	cursor: pointer;
 	color: #7F1C25;
   -text-transform: uppercase;
-  font-weight: 300;
+  -font-family: "Helvetica";
+
 }
 
 .tab [type=radio] {
