--- a/redwoods.css
+++ b/redwoods.css
@@ -1,6 +1,6 @@
 
-/*@import url('https://fonts.googleapis.com/css?family=Bellefair');*/
-@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,400i');
+@import url('https://fonts.googleapis.com/css?family=Bellefair');
+/*@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,400i');*/
 
 a {
     -background-color:transparent;
@@ -17,28 +17,28 @@ a:hover {
 
 h2 {
    color: #7F1C25;
-   font-family: 'Cormorant Garamond', serif;
+   font-family: 'Bellefair', serif;
    -font-weight: 300;
 }
 
 h1 {
    color: #7F1C25;
-   font-family: 'Cormorant Garamond', serif;
+   font-family: 'Bellefair', serif;
    font-weight: 300;
 }
 body {
-   font-family: 'Cormorant Garamond', serif;
+   font-family: 'Bellefair', serif;
    background-color: #E8F2F1;
    padding-top: 50px;
    padding-left: 50px;
-   padding-right: 40px;
+   padding-right: 50px;
    line-height: 1.2;
    font-size: 1.33em;
 
 }
 
 .books_italics a:link {
-  font-family: 'Cormorant Garamond', serif;
+  font-family: 'Bellefair', serif;
   font-style: italic;
   a
 }
