--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 			text-decoration: none;
 		}
 
-		h1 strong, h2 strong, h3 strong, h4 strong, h5 strong, h6 strong
+		h1 strong, h2 strong, h4 strong, h5 strong, h6 strong
 		{
 			color: #FFFFFF;
 		}
@@ -89,6 +89,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 		{
 			font-size: 1.30em;
 			letter-spacing: -.80px;
+      color: #FFFFFF;
 		}
 
 			h2.alt
@@ -103,7 +104,8 @@ executable file 778 lines (654 sloc) 13.5 KB
 
 		h3
 		{
-			font-size: 1.5em;
+			font-size: 1.7em;
+      color: #FFFFFF;
 		}
 
 	header
@@ -699,7 +701,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 	{
 		margin-left: 375px;
 		text-align: center;
-		background-color: #574D4F;
+		background-color: #9ECECC;
 		color: black;
 		padding: 3em 0 4em 0;
 		-box-shadow: inset 0 1px 0 0 rgba(0,0,0,0.05), inset 0 0.1em 0.1em 0 rgba(0,0,0,0.025);
@@ -791,7 +793,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 
 			#main > section.two
 			{
-				background-color: #BAB0AE;
+				background-color: #958D8B;
 			}
 
 			#main > section.three
@@ -801,7 +803,7 @@ executable file 778 lines (654 sloc) 13.5 KB
 
 			#main > section.four
 			{
-				background-color: #BAB0AE;
+				background-color: #958D8B;
 			}
 
     Contact GitHub API Training Shop Blog About
