--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+/* Git not updating css file Sept 10, 2017
+
 /*********************************************************************************/
 /* Basic                                                                         */
 /*********************************************************************************/
