cleaned up nonsense code

--- a/css/style.css
+++ b/css/style.css
@@ -757,7 +757,7 @@
 				padding: 6em 0;
 				background-size: cover;
 				background-position: center center;
-				background-image: url("bands.jpg");
+				-background-image: url("bands.jpg");
 			}
 
 			#main > section.one
