--- a/redwoods.css
+++ b/redwoods.css
@@ -7,6 +7,7 @@ a {
     text-decoration: none;
     color: #7F1C25;
     font-style: normal;
+    font-weight: 300;
 }
 
 a:hover {
@@ -15,10 +16,15 @@ a:hover {
     color: #612711;
 }
 
+h4 {
+   color: #7F1C25;
+   font-family: 'Bellefair', serif;
+}
+
 h2 {
    color: #7F1C25;
    font-family: 'Bellefair', serif;
-   -font-weight: 300;
+   font-weight: 300;
 }
 
 h1 {
@@ -56,8 +62,8 @@ body {
 }
 
 .tab label {
-  font-size: 26px;
-  margin-right: 32px;
+  font-size: 29px;
+  margin-right: 23px;
 	position: relative;
 	top: 0;
 	cursor: pointer;
