--- a/resumestyle.css
+++ b/resumestyle.css
@@ -336,18 +336,19 @@ section:last-child {
 	}
 }
 
-.instaFade {
+
+/*.instaFade {
     -webkit-animation-name: reset, fade-in;
-    -webkit-animation-duration: 1.0s;
+    -webkit-animation-duration: .5s;
     -webkit-animation-timing-function: ease-in;
 
 	-moz-animation-name: reset, fade-in;
-    -moz-animation-duration: 1.0s;
+    -moz-animation-duration: .5s;
     -moz-animation-timing-function: ease-in;
 
 	animation-name: reset, fade-in;
-    animation-duration: 1.0s;
-    animation-timing-function: ease-in;
+    -animation-duration: 1.0s;
+    -animation-timing-function: ease-in;
 }
 
 .quickFade {
@@ -360,36 +361,36 @@ section:last-child {
     -moz-animation-timing-function: ease-in;
 
 	animation-name: reset, fade-in;
-    animation-duration: 1.0s;
+    -animation-duration: 1.0s;
     animation-timing-function: ease-in;
 }
 
 .delayOne {
-	-webkit-animation-delay: 0, .5s;
-	-moz-animation-delay: 0, .5s;
-	animation-delay: 0, .5s;
+	-webkit-animation-delay: 0, .2s;
+	-moz-animation-delay: 0, .2s;
+	animation-delay: 0, .2s;
 }
 
 .delayTwo {
-	-webkit-animation-delay: 0, 1s;
-	-moz-animation-delay: 0, 1s;
-	animation-delay: 0, 1s;
+	-webkit-animation-delay: 0, .2s;
+	-moz-animation-delay: 0, .2s;
+	animation-delay: 0, .2s;
 }
 
 .delayThree {
 	-webkit-animation-delay: 0, 1.0s;
-	-moz-animation-delay: 0, 1.5s;
-	animation-delay: 0, 1.5s;
+	-moz-animation-delay: 0, .2s;
+	animation-delay: 0, .2s;
 }
 
 .delayFour {
 	-webkit-animation-delay: 0, 1s;
 	-moz-animation-delay: 0, 2s;
-	animation-delay: 0, 2s;
+	animation-delay: 0, 1s;
 }
 
 .delayFive {
-	-webkit-animation-delay: 0, 1.0s;
-	-moz-animation-delay: 0, 1.0s;
-	animation-delay: 0, 1.0s;
+	-webkit-animation-delay: 0, .2s;
+	-moz-animation-delay: 0, .2s;
+	animation-delay: 0, .2s;
 }
