--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
+  #quote {
+		font-style: italic;
+		color: #383838;
+	}
+
 	body
 	{
 		background: #FFFFFF;
